# mlflow-poc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.model-server.yaml  docker-compose.yaml  pyproject.toml
dagster/: Dockerfile  dagster.yaml
model-settings/: diabetes-model-settings.json
src/dagster_job/: __init__.py  jobs.py
src/notebooks/: 01-tracking_quickstart.ipynb  01-tracking_quickstart.py  02-diabetes-model.ipynb  02-diabetes-model.py  02-simple-workflow.ipynb  02-simple-workflow.py  testing-model-server.ipynb  testing-model-server.py
src/notebooks/extensions/: __init__.py  skip_kernel_extension.py
