[project]
name = "mlflow-poc"
version = "0.1.0"
description = "POC for local MLFlow"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "boto3 (>=1.38.13,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupytext (>=1.17.1,<2.0.0)",
    "mlserver (>=1.7.0,<2.0.0)",
    "mlserver-mlflow (>=1.7.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
